--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "devDependencies": {
     "@nuxt/devtools": "latest",
     "@nuxtjs/eslint-module": "^4.1.0",
+    "@nuxtjs/tailwindcss": "^6.7.2",
     "@rushstack/eslint-patch": "^1.3.2",
     "@types/node": "^18",
     "eslint": "^8.42.0",
@@ -21,6 +22,7 @@
     "eslint-plugin-nuxt": "^4.0.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-simple-import-sort": "^10.0.0",
+    "eslint-plugin-tailwindcss": "^3.12.1",
     "eslint-plugin-unused-imports": "^2.0.0",
     "eslint-plugin-vue": "^9.14.1",
     "nuxt": "^3.5.2",
