--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "eslint-plugin-unused-imports": "^2.0.0",
     "eslint-plugin-vue": "^9.14.1",
     "nuxt": "^3.5.2",
-    "prettier": "^2.8.8"
+    "prettier": "^2.8.8",
+    "sass": "^1.63.4"
   }
 }
