--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "eslint-plugin-vue": "^9.14.1",
     "nuxt": "^3.5.2",
     "prettier": "^2.8.8",
-    "sass": "^1.63.4"
+    "sass": "^1.63.4",
+    "typescript": "^5.1.3"
   }
 }
