--- a/package.json
+++ b/package.json
@@ -13,20 +13,20 @@
   },
   "devDependencies": {
     "@nuxt/devtools": "latest",
+    "@nuxt/eslint-config": "^0.1.1",
+    "@nuxtjs/eslint-module": "^4.1.0",
     "@nuxtjs/tailwindcss": "^6.7.2",
     "@rushstack/eslint-patch": "^1.3.2",
     "@types/node": "^18",
     "eslint": "^8.42.0",
     "eslint-config-prettier": "^8.8.0",
-    "eslint-plugin-nuxt": "^4.0.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-simple-import-sort": "^10.0.0",
     "eslint-plugin-tailwindcss": "^3.12.1",
     "eslint-plugin-unused-imports": "^2.0.0",
-    "eslint-plugin-vue": "^9.14.1",
     "nuxt": "^3.5.2",
     "prettier": "^2.8.8",
     "sass": "^1.63.4",
-    "typescript": "^5.1.3"
+    "typescript": "^4.9.5"
   }
 }
