--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@nuxt/eslint-config": "^0.1.1",
     "@nuxtjs/eslint-module": "^4.1.0",
     "@nuxtjs/tailwindcss": "^6.7.2",
+    "@pinia/nuxt": "^0.4.11",
     "@rushstack/eslint-patch": "^1.3.2",
     "@types/node": "^18",
     "eslint": "^8.42.0",
@@ -28,5 +29,8 @@
     "prettier": "^2.8.8",
     "sass": "^1.63.4",
     "typescript": "^4.9.5"
+  },
+  "dependencies": {
+    "pinia": "^2.1.4"
   }
 }
