--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@nuxtjs/tailwindcss": "^6.7.2",
     "@rushstack/eslint-patch": "^1.3.2",
     "@types/node": "^18",
+    "@vueuse/core": "^10.2.0",
     "eslint": "^8.42.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^4.2.1",
@@ -30,7 +31,10 @@
     "typescript": "^4.9.5"
   },
   "dependencies": {
+    "@hebilicious/vue-query-nuxt": "^0.1.0-beta.0",
     "@pinia/nuxt": "^0.4.11",
+    "@tanstack/vue-query": "^4.29.14",
+    "@vueuse/nuxt": "^10.2.0",
     "nuxt-icons": "^3.2.1",
     "nuxt-swiper": "^1.1.0",
     "pinia": "^2.1.4"
